--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Get the latest industrial news, insights, and trends from across the globe at Industrial Times." />
+  <meta name="Dakshet Ghole" content="News, Developer: Dakshet Ghole, Designer: Dakshet Ghole." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
