here we again write code in index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,13 @@
     content="Get the latest industrial news, insights, and trends from across the globe at Industrial Times." />
   <meta name="Dakshet Ghole" content="News, Developer: Dakshet Ghole, Designer: Dakshet Ghole." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
+  <meta property="og:title" content="hello" />
+  <meta property="og:site_name" content="hello is am i." />
+  <meta property="og:url" content="https://www.industrialtimes24.in/snews/news/66f3a1b9cd6ac98667313e89" />
+  <meta property="og:description" content="hello i si iautom and ho sdlsl" />
+  <meta property="og:type" content="" />
+  <meta property="og:image"
+    content="http://res.cloudinary.com/dpkaxrntd/image/upload/v1727242172/df85jrwmbue1cjymxoc4.jpg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
